--- a/portfolio-abele.html
+++ b/portfolio-abele.html
@@ -165,7 +165,7 @@
   <h2 class="col-10 offset-1">
 ABELE<br>
 <span class="green-underline">BUSINESS PARK</span></h2>
-<h3 class="col-12 offset-1">South Fayette | 42,700 SF</h3>
+<h3 class="col-12 offset-1">South Fayette</h3>
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
