--- a/portfolio-diamond-ridge.html
+++ b/portfolio-diamond-ridge.html
@@ -177,7 +177,7 @@
 <div class="link-container col-10 offset-1">
 
 
-<a href="#" class="col-12 link-outline-2"><p class="col-10">SCHEDULE TOUR</p>
+<a href="#" class="col-12 link-outline-2"><p class="col-10">REQUEST MORE INFO</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
   </a>
 
