--- a/portfolio-eqt.html
+++ b/portfolio-eqt.html
@@ -176,7 +176,7 @@ EQT Plaza is a distinctive, Class A tower in downtown Pittsburgh. The 32-story, 
 <img src="assets/arrow.svg" alt="#" class="col-2">
 </a>
 
-<a href="#" class="col-12 link-outline-2"><p class="col-10">SCHEDULE TOUR</p>
+<a href="#" class="col-12 link-outline-2"><p class="col-10">REQUEST MORE INFO</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
   </a>
 
