--- a/portfolio-foster-zero.html
+++ b/portfolio-foster-zero.html
@@ -98,7 +98,7 @@
 <img src="assets/images/portfolio/foster-zero/foster-zero.png" alt="#" class="middle">
 
 
-<h1 class="col-10 offset-1"><span class="portfolio-delay-1">FOSTER</span><br><span class="portfolio-delay-2">ZERO</span><br><span class="turquoise-underline portfolio-delay-3">PLAZA</span></h1>
+<h1 class="col-10 offset-1"><span class="portfolio-delay-1">FOSTER</span><br><span class="turquoise-underline portfolio-delay-2">ZERO</span></h1>
         </section>
 
 
@@ -167,10 +167,10 @@
 
 <div class="col-12 col-lg-5 col-xl-4">
 
-  <h2 class="col-10 offset-1">
-    FOSTER ZERO<br>
-<span class="green-underline">PLAZA</span></h2>
-<h3 class="col-10 offset-1">Greentree | Business Park</h3>
+  <h2 class="col-10 offset-1"><span class="green-underline">
+    FOSTER ZERO
+</span></h2>
+<h3 class="col-10 offset-1">Greentree | 42,700SF</h3>
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
