--- a/portfolio-stealth.html
+++ b/portfolio-stealth.html
@@ -98,7 +98,7 @@
 <img src="assets/images/portfolio/stealth/stealth.png" alt="#" class="middle">
 
 
-<h1 class="col-10 offset-1"><span class="portfolio-delay-1">INDUSTRY</span><br><span class="turquoise-underline portfolio-delay-2">DRIVE</span><br></h1>
+<h1 class="col-10 offset-1"><span class="portfolio-delay-1">STEALTH</span><br><span class="portfolio-delay-2">TECHNOLOGY</span><br><span class="turquoise-underline portfolio-delay-3">CENTER</span><br></h1>
         </section>
 
 
@@ -168,19 +168,19 @@
 <div class="col-12 col-lg-5 col-xl-4">
 
   <h2 class="col-10 offset-1">
-    INDUSTRY<br>
-<span class="green-underline">DRIVE</span></h2>
-<h3 class="col-10 offset-1">Findlay Township | 60,256 SF</h3>
+    STEALTH TECHNOLOGY
+<span class="green-underline">CENTER</span></h2>
+<h3 class="col-10 offset-1">Southpointe | 70,146 SF</h3>
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
-Check back for details.
+NEW Tenant Lounge with ping pong, putting green, foosball, corn hole, balcony and vending. On-Site 15,000 SF Health Club, Cafe, outdoor patios with picnic tables and umbrellas make Stealth Technology a comfortable experience for all. It also includes 24/7 access 365 days a year with building wide security system. This RENOVATED property includes Class A furnished office suites with 10' finished ceiling heights, abundant parking with a 5/1,000 per SF ratio, and energy efficient reflective glass that cuts heat rays by 50%. With NEW roof, landscaping, a renovated lobby, signage, and restrooms the building offers great new amenities.
 </p>
 
 
 <div class="link-container col-10 offset-1">
 
-  <a href="https://looplink.burnsscalorealestate.com/Listing/400-Industry-Dr-Pittsburgh-PA/18335563/" target="_blank" class="col-12 link-outline-2"><p class="col-10">VIEW LISTING</p>
+  <a href="https://looplink.burnsscalorealestate.com/Listing/333-Technology-Dr-Canonsburg-PA/15280356/" target="_blank" class="col-12 link-outline-2"><p class="col-10">VIEW LISTING</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
 </a>
 
