--- a/portfolio.html
+++ b/portfolio.html
@@ -293,7 +293,7 @@
       <div class="col-12 p-0 portfolio-image-container">
   <img src="assets/images/portfolio/stealth.png" alt="#">
   </div>
-<h3>STEALTH</h3>
+<h3>STEALTH TECHNOLOGY CENTER</h3>
 <p>Southpointe</p>
 </a>
 </div>
