--- a/team-management.html
+++ b/team-management.html
@@ -96,7 +96,7 @@
             <div class="featured-projects col-10 col-md-10 col-xl-8 offset-xl-2 offset-1" id="leadership">
 
               <p class="small-headline col-6">
-              DEVELOPMENT
+              MANAGEMENT
               </p>
 
 
