--- a/portfolio-bentley.html
+++ b/portfolio-bentley.html
@@ -180,13 +180,10 @@
 
 <div class="link-container col-10 offset-1">
 
-    <a href="#" class="col-12 link-outline-2"><p class="col-10">REQUEST MORE INFO</p>
+    <a href="#" class="col-12 link-outline-2 border-bottom"><p class="col-10">REQUEST MORE INFO</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
     </a>
 
-  <a href="#" class="col-12 link-outline-2 border-bottom"><p class="col-10">SCHEDULE TOUR</p>
-<img src="assets/arrow.svg" alt="#" class="col-2">
-    </a>
 
 
 </div>
