--- a/portfolio-boardwalk.html
+++ b/portfolio-boardwalk.html
@@ -165,8 +165,7 @@
 
 <div class="col-12 col-lg-5 col-xl-4">
 
-  <h2 class="col-10 offset-1">
-BOARDWALK<br><span class="green-underline">CAMPUS</span></h2>
+  <h2 class="col-10 offset-1">THE BOARDWALK<br><span class="green-underline">CAMPUS</span></h2>
 <h3 class="col-10 offset-1">North Fayette | 216,000 SF</h3>
 
 
@@ -180,13 +179,10 @@ BOARDWALK<br><span class="green-underline">CAMPUS</span></h2>
 
 <div class="link-container col-10 offset-1">
 
-  <a href="#" class="col-12 link-outline-2"><p class="col-10">REQUEST MORE INFO</p>
+  <a href="#" class="col-12 link-outline-2 border-bottom"><p class="col-10">REQUEST MORE INFO</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
   </a>
 
-<a href="#" class="col-12 link-outline-2 border-bottom"><p class="col-10">SCHEDULE TOUR</p>
-<img src="assets/arrow.svg" alt="#" class="col-2">
-  </a>
 
 </div>
 </div>
