--- a/portfolio-riviera.html
+++ b/portfolio-riviera.html
@@ -188,15 +188,11 @@ Your browser does not support the video tag.
 <img src="assets/arrow.svg" alt="#" class="col-2">
 </a>
 
-    <a href="#" class="col-12 link-outline-2"><p class="col-10">DOWNLOAD FLYER</p>
+  <a href="#" class="col-12 link-outline-2"><p class="col-10">REQUEST MORE INFO</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
     </a>
 
-  <a href="#" class="col-12 link-outline-2"><p class="col-10">SCHEDULE TOUR</p>
-<img src="assets/arrow.svg" alt="#" class="col-2">
-    </a>
-
-  <a href="#" class="col-12 link-outline-2 border-bottom"><p class="col-10">CONTACT BROKER</p>
+  <a href="#" class="col-12 link-outline-2 border-bottom"><p class="col-10">SCHEDULE TOUR</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
     </a>
 
