--- a/portfolio-vision.html
+++ b/portfolio-vision.html
@@ -93,7 +93,7 @@
       <section class="col-12" id="container-1">
         <span class="top"></span>
 
-<img src="assets/images/portfolio/vision/vision.png" alt="#" class="video-background">
+<img src="assets/images/portfolio/visionedit.jpg" alt="#" class="bottom">
 
 <h1 class="col-10 offset-1"><span class="portfolio-delay-1">THE</span><br><span class="turquoise-underline portfolio-delay-2">VISION</span></h1>
 
@@ -176,17 +176,15 @@ THE VISION<br><span class="green-underline">ON FIFTEENTH</span></h2>
 <img src="assets/arrow.svg" alt="#" class="col-2">
 </a>
 
-    <a href="#" class="col-12 link-outline-2"><p class="col-10">DOWNLOAD FLYER</p>
+    <a href="#" class="col-12 link-outline-2"><p class="col-10">REQUEST MORE INFO</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
     </a>
 
-  <a href="#" class="col-12 link-outline-2"><p class="col-10">SCHEDULE TOUR</p>
+  <a href="#" class="col-12 link-outline-2 border-bottom"><p class="col-10">SCHEDULE TOUR</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
     </a>
 
-  <a href="#" class="col-12 link-outline-2 border-bottom"><p class="col-10">CONTACT BROKER</p>
-<img src="assets/arrow.svg" alt="#" class="col-2">
-    </a>
+
 
 
 </div>
