--- a/portfolio-zenith.html
+++ b/portfolio-zenith.html
@@ -166,7 +166,7 @@
 <div class="col-12 col-lg-5 col-xl-4">
 
   <h2 class="col-10 offset-1"><span class="green-underline">ZENITH RIDGE</span></h2>
-<h3 class="col-10 offset-1">Southside | 87 Units</h3>
+<h3 class="col-10 offset-1">Southpointe | 486,000SF</h3>
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
@@ -179,19 +179,15 @@
 
 <div class="link-container col-10 offset-1">
 
-  <a href="https://www.loopnet.com/Listing/44-Abele-Rd-Bridgeville-PA/6313756/" target="_blank" class="col-12 link-outline-2"><p class="col-10">VIEW LISTING</p>
+  <a href="https://looplink.burnsscalorealestate.com/Listing/2400-Ansys-Dr-Canonsburg-PA/19170097/" target="_blank" class="col-12 link-outline-2"><p class="col-10">VIEW LISTING</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
 </a>
 
-    <a href="#" class="col-12 link-outline-2"><p class="col-10">DOWNLOAD FLYER</p>
+    <a href="#" class="col-12 link-outline-2"><p class="col-10">REQUEST MORE INFO</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
     </a>
 
-  <a href="#" class="col-12 link-outline-2"><p class="col-10">SCHEDULE TOUR</p>
-<img src="assets/arrow.svg" alt="#" class="col-2">
-    </a>
-
-  <a href="#" class="col-12 link-outline-2 border-bottom"><p class="col-10">CONTACT BROKER</p>
+  <a href="#" class="col-12 link-outline-2 border-bottom"><p class="col-10">SCHEDULE TOUR</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
     </a>
 
