--- a/who-we-are.html
+++ b/who-we-are.html
@@ -109,7 +109,7 @@ Your browser does not support the video tag.
 Your browser does not support the video tag.
 </video>
 
-<h1 class="col-10 offset-1"><span class="delay-1">FOCUSED</span><span class="delay-2"> ON</span><br><span class="delay-3 turquoise-underline">THE </span><span class="delay-4 turquoise-underline">FUTURE</span></h1>
+<h1 class="col-10 offset-1"><span class="delay-1">WE ARE</span><br><span class="delay-2">MARKET</span><br><span class="delay-3 turquoise-underline"></span><span class="delay-4 turquoise-underline">MAKERS</span></h1>
         </section>
 
 
