--- a/index.html
+++ b/index.html
@@ -88,11 +88,55 @@
           </ul>
 
           <ul class="secondary-nav col-8 col-md-5 offset-md-4 col-lg-4 col-xl-4 offset-2 offset-lg-0">
-            <li class="nav-item-4"><a href="#">SCHEDULE A TOUR</a></li>
-            <li class="nav-item-5"><a href="https://www.landport.net/r/sva/logout-landing.lpa" target="_blank">MEMBERS</a></li>
+            <li class="nav-item-4"><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">SCHEDULE A TOUR</a></li>
+            <li class="nav-item-5"><a href="https://www.landport.net/r/sva/login.lpa" target="_blank">MEMBERS</a></li>
             </ul>
 
           </nav>
+
+
+          <!-- Modal -->
+          <div class="modal col-8 fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog col-8">
+              <div class="modal-content col-8">
+                <div class="modal-header">
+                  <h6 class="modal-title" id="exampleModalLabel">BSRE</h6>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <h2 class="col-12">CHECK BACK<span class="orange-underline">SOON</span></h2>
+                  <h3 class="col-12">This Page In Development</h3>
+                  <p class="col-12">To schedule a tour, please call <a href="#">412.250.3000</a></p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+<!-- END MODAL -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <div class="scroll-container col-12 p-0">
       <section class="col-12" id="container-1">
@@ -128,7 +172,7 @@ Your browser does not support the video tag.
 
 <div class="copy-container col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-0">
 <p class="col-10 col-md-8 col-lg-12 col-xl-10 offset-1 offset-md-2 offset-lg-0 ">
-As leaders in all industries continue to search for competitive advantages, they continue to overlook the most effective weapon in their arsenal—their workplace. We create spaces that people <span class="italic">want</span> to come to, not just <span class="italic">have</span> to. Dynamic spaces that not only attract today’s brightest talent but also spark motivation, innovation, happiness, and loyalty for years to come.
+We create spaces that people want to come to, not just have to. Dynamic spaces that not only attract today’s brightest talent but also spark motivation, innovation, happiness, and loyalty for years to come. Giving them more of the things they love, and giving you peace of mind.
 </p>
   </div>
 
@@ -159,7 +203,7 @@ PUTTING<br><span class="turquoise-underline">PEOPLE FIRST</span>
     </h2>
 
     <p class="col-12">
-Our approach is informed by human values—namely, a desire for health and happiness—and adheres to the principle that the workplace creates a framework for life. We ensure that helpful amenities are always within reach and conceive communities where people can interact. Keeping people’s minds fresh and sharp, while providing them with a stimulating stage to play out their lives.
+Our approach is informed by human values—namely, a desire for health and happiness—and adheres to the principle that the workplace creates a framework for life. Keeping people’s minds fresh and sharp, while providing them with a stimulating stage to play out their lives.
   </p>
 </div>
 
@@ -220,7 +264,7 @@ FEATURED PROPERTIES
     </ul>
 
 
-    <ul class="footer-nav col-4 offset-4">
+    <ul class="footer-nav col-5 offset-3">
       <li><a href="privacy-policy.html">PRIVACY POLICY</a></li>
       <li><a href="accessibility.html">ACCESSIBILITY</a></li>
       <li><a href="tenant-perks.html">TENANT PERKS</a></li>
