--- a/push-1.html
+++ b/push-1.html
@@ -37,7 +37,7 @@
         </h2>
 
         <p class="col-12 col-lg-8 offset-2">
-    Our approach is informed by human values—namely, a desire for health and happiness—and adheres to the principle that the workplace creates a framework for life. We ensure that helpful amenities are always within reach and conceive communities where people can interact. Keeping people’s minds fresh and sharp, while providing them with a stimulating stage to play out their lives.
+Our approach is informed by human values—namely, a desire for health and happiness—and adheres to the principle that the workplace creates a framework for life. Keeping people’s minds fresh and sharp, while providing them with a stimulating stage to play out their lives.
     </p>
 
     </div>
