--- a/who-we-are.html
+++ b/who-we-are.html
@@ -131,7 +131,7 @@ We are inspired by our past, but more motivated by our future. Our identity was 
   </div>
 
   <div class="link-container col-10 col-md-8 col-xl-5 offset-1 offset-md-2 offset-xl-5">
-    <a href="who-we-are.html" class="link-outline col-12"><p class="col-10">GET TO KNOW US</p>
+    <a href="team.html" class="link-outline col-12"><p class="col-10">GET TO KNOW US</p>
     <img src="assets/arrow.svg" alt="#" class="col-2">
     </a>
   </div>
