--- a/portfolio-bursca.html
+++ b/portfolio-bursca.html
@@ -163,7 +163,10 @@ BURSCA<br><span class="green-underline">BUSINESS PARK</span></h2>
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
-Whether you’re looking for office, flex, showroom space, or even a combination of each, Bursca Business Park has what you need to take your business to new heights. Nestled in a park-like community just off Washington Pike, Bursca Business Park means “big business” for any sized business. Less than 1 mile from I-79 and surrounded by retail amenities, Bursca Business Park offers a wide range of flexible office solutions to help you meet the demands of your business.
+Nestled in a park-like community just off Washington Pike, Bursca Business Park means “big business” for any sized business. Less than 1 mile from I-79 and surrounded by retail amenities, Bursca Business Park offers a wide range of flexible office solutions to help you meet the demands of your business.
+<br>
+<br>
+Whether you’re looking for office, flex, showroom space, or even a combination of each, Bursca Business Park has what you need to take your business to new heights.
 </p>
 
 
