--- a/portfolio-eqt.html
+++ b/portfolio-eqt.html
@@ -166,7 +166,10 @@
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
-EQT Plaza is a distinctive, Class A tower in downtown Pittsburgh. The 32-story, ~616,000-square-foot skyscraper commands the Sixth Avenue entryway to the city’s cultural district, in walking distance of the Benedum Center for the Performing Arts, Heinz Hall and the O’Reilly Theater. A fusion of polished marble, brass and stone grace the two-story lobby. Onsite amenities include a deli, upscale restaurant and state-of-the-art conference and fitness facilities. A landscaped and gas-lit Plaza is home to lunchtime crowds and warm weather concerts.
+EQT Plaza is a distinctive, Class A tower in downtown Pittsburgh. The 32-story, ~616,000-square-foot skyscraper commands the Sixth Avenue entryway to the city’s cultural district, in walking distance of the Benedum Center for the Performing Arts, Heinz Hall and the O’Reilly Theater.
+<br>
+<br>
+A fusion of polished marble, brass and stone grace the two-story lobby. Onsite amenities include a deli, upscale restaurant and state-of-the-art conference and fitness facilities. A landscaped and gas-lit Plaza is home to lunchtime crowds and warm weather concerts.
 </p>
 
 
