--- a/portfolio-foster-zero.html
+++ b/portfolio-foster-zero.html
@@ -174,7 +174,10 @@
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
-This office building has had $2.2 million exterior and interior renovations took place enhancing the features of the property. The property includes brand new elevators, high walkability to nearby amenities, excellent rooftop signage and hillside signage is available. With extreme visibility of the building from I-376, enjoy quick and easy access to the interstate, located only five minutes from Downtown Pittsburgh. 400 Holiday Dr. is move-in ready and the furniture is available.
+This office building has had $2.2 million exterior and interior renovations took place enhancing the features of the property. The property includes brand new elevators, high walkability to nearby amenities, excellent rooftop signage and hillside signage is available.
+<br>
+<br>
+With extreme visibility of the building from I-376, enjoy quick and easy access to the interstate, located only five minutes from Downtown Pittsburgh. 400 Holiday Dr. is move-in ready and the furniture is available.
 </p>
 
 
