--- a/portfolio-industry-drive.html
+++ b/portfolio-industry-drive.html
@@ -174,7 +174,10 @@
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
-Check back for details.
+This exquisite, single-floor, move-in ready, Luxury Class A office is uniquely positioned less than five minutes from Pittsburgh International Airport and provides enormous brand exposure to daily traffic along I-376. The open floor-plan is lined with private offices and loaded with conference and collaboration spaces throughout.
+<br>
+<br>
+  An integrated loading area offers incredible flex-space for deliveries or inventory, and the 4.5:1000 free parking only adds to the property’s list of amenities. A full-size café and floor-to-ceiling windows provide abundant natural light to energize your employees every day.
 </p>
 
 
