--- a/portfolio-beacon.html
+++ b/portfolio-beacon.html
@@ -177,7 +177,10 @@ Your browser does not support the video tag.
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
-Beacon I is the first Class-A office development inside Abele Business Park. Its 80,000 square-feet are wrapped in floor-to-ceiling glass windows and topped with solar panels, making Beacon I an exquisite combination of modern design and innovative function in office space. Tenants enjoy outdoor meeting areas, natural walking trails with fitness stations and proximity to The Piazza for lunch, and TopGolf for some happy hour fun. The project was completed in March 2018.
+Beacon I is the first Class-A office development inside Abele Business Park. Its 80,000 square-feet are wrapped in floor-to-ceiling glass windows and topped with solar panels, making Beacon I an exquisite combination of modern design and innovative function in office space.
+<br>
+<br>
+Tenants enjoy outdoor meeting areas, natural walking trails with fitness stations and proximity to The Piazza for lunch, and TopGolf for some happy hour fun. The project was completed in March 2018.
 </p>
 
 
