--- a/team-brokerage.html
+++ b/team-brokerage.html
@@ -135,6 +135,29 @@
 
 
 
+      <div class="container-p col-12 col-md-4 col-xl-3 float-left">
+        <div class="portfolio-list col-12 float-left">
+      <img src="assets/images/team/brokerage/pamela.png" alt="#" class="col-12">
+      <div class="name-container">
+      <h4>Pamela Austin</h4>
+      <h5>Brand Ambassador</h5>
+    </div>
+
+      <ul>
+        <li><a href="mailto:paustin@burnsscalo.com">paustin@burnsscalo.com</a></li>
+        <li>O: <a href="#">412.458.6336</a></li>
+        <li>C: <a href="#">773.383.7094</a></li>
+
+
+      </ul>
+      <div class="background-white">
+      </div>
+      </div>
+      </div>
+
+
+
+
 
     <div class="container-p col-12 col-md-4 col-xl-3 float-left">
       <div class="portfolio-list col-12 float-left">
@@ -147,6 +170,30 @@
     <ul>
       <li><a href="mailto:vkonno@burnsscalo.com">vkonno@burnsscalo.com</a></li>
       <li>O: <a href="#">724.622.2756</a></li>
+      <li><a href="#">LinkedIn</a></li>
+
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+
+
+    <div class="container-p col-12 col-md-4 col-xl-3 float-left">
+      <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/brokerage/ruby.png" alt="#" class="col-12">
+      <div class="name-container">
+    <h4>Ruby Scalo</h4>
+    <h5>Leasing Specialist</h5>
+  </div>
+
+    <ul>
+      <li><a href="mailto:rscalo@burnsscalo.com">rscalo@burnsscalo.com</a></li>
+      <li>O: <a href="#">412.250.3271</a></li>
+      <li>C: <a href="#">412.736.5157</a></li>
       <li><a href="#">LinkedIn</a></li>
 
     </ul>
@@ -179,19 +226,19 @@
 
 
 
+
+
     <div class="container-p col-12 col-md-4 col-xl-3 float-left">
       <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/brokerage/ruby.png" alt="#" class="col-12">
+    <img src="assets/images/team/brokerage/kelley.png" alt="#" class="col-12">
       <div class="name-container">
-    <h4>Ruby Scalo</h4>
-    <h5>Leasing Specialist</h5>
+    <h4>Kelley Hoover Heckathorne</h4>
+    <h5>Director of Brokerage Services</h5>
   </div>
 
     <ul>
-      <li><a href="mailto:rscalo@burnsscalo.com">rscalo@burnsscalo.com</a></li>
-      <li>O: <a href="#">412.250.3271</a></li>
-      <li>C: <a href="#">412.736.5157</a></li>
-      <li><a href="#">LinkedIn</a></li>
+      <li><a href="mailto:khoover@burnsscalo.com">khoover@burnsscalo.com</a></li>
+      <li>C: <a href="#">412.670.4248</a></li>
 
     </ul>
     <div class="background-white">
@@ -200,26 +247,6 @@
     </div>
 
 
-
-    <div class="container-p col-12 col-md-4 col-xl-3 float-left">
-      <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/brokerage/pamela.png" alt="#" class="col-12">
-    <div class="name-container">
-    <h4>Pamela Austin</h4>
-    <h5>Brand Ambassador</h5>
-  </div>
-
-    <ul>
-      <li><a href="mailto:paustin@burnsscalo.com">paustin@burnsscalo.com</a></li>
-      <li>O: <a href="#">412.458.6336</a></li>
-      <li>C: <a href="#">773.383.7094</a></li>
-
-
-    </ul>
-    <div class="background-white">
-    </div>
-    </div>
-    </div>
 
 
 
@@ -243,27 +270,6 @@
 
 
 
-    <div class="container-p col-12 col-md-4 col-xl-3 float-left">
-      <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/brokerage/kelley.png" alt="#" class="col-12">
-      <div class="name-container">
-    <h4>Kelley Hoover Heckathorne</h4>
-    <h5>Director of Brokerage Services</h5>
-  </div>
-
-    <ul>
-      <li><a href="mailto:khoover@burnsscalo.com">khoover@burnsscalo.com</a></li>
-      <li>C: <a href="#">412.670.4248</a></li>
-
-
-    </ul>
-    <div class="background-white">
-    </div>
-    </div>
-    </div>
-
-
-
 
     <div class="container-p col-12 col-md-4 col-xl-3 float-left">
       <div class="portfolio-list col-12 float-left">
@@ -278,6 +284,26 @@
       <li>O: <a href="#">412.250.3293</a></li>
       <li>C: <a href="#">412.670.9363</a></li>
 
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+
+    <div class="container-p col-12 col-md-4 col-xl-3 float-left">
+      <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/brokerage/chris.png" alt="#" class="col-12">
+      <div class="name-container">
+    <h4>Chris Bernardi</h4>
+    <h5>Marketing Manager</h5>
+  </div>
+
+    <ul>
+      <li><a href="mailto:cbernardi@burnsscalo.com">cbernardi@burnsscalo.com</a></li>
+      <li>C: <a href="#">412.770.5651</a></li>
 
     </ul>
     <div class="background-white">
@@ -285,6 +311,26 @@
     </div>
     </div>
 
+
+
+
+    <div class="container-p col-12 col-md-4 col-xl-3 float-left">
+      <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/brokerage/placeholder.png" alt="#" class="col-12">
+      <div class="name-container">
+    <h4>Lia Chappel</h4>
+    <h5>Marketing Coordinator</h5>
+  </div>
+
+    <ul>
+      <li><a href="mailto:lchappell@burnsscalo.com">lchappell@burnsscalo.com</a></li>
+      <li>O: <a href="#">412.310.4295</a></li>
+
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
 
 
 
