--- a/team-development.html
+++ b/team-development.html
@@ -122,6 +122,27 @@
 
 
 
+                <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+                  <div class="portfolio-list col-12 float-left">
+                  <img src="assets/images/team/travis.png" alt="#" class="col-12">
+                    <div class="name-container">
+                  <h4>Travis Raught</h4>
+                  <h5>Senior Project Manager</h5>
+                </div>
+
+                  <ul>
+                    <li><a href="mailto:traught@burnsscalo.com">traught@burnsscalo.com</a></li>
+                    <li>C: <a href="#">724.513.4257</a></li>
+                    <li class="bio"><a href="#">Read Bio</a></li>
+                  </ul>
+                  <div class="background-white">
+                  </div>
+                  </div>
+                  </div>
+
+
+
+
               <div class="container-p col-12 col-md-4 col-xl-3 float-left">
                 <div class="portfolio-list col-12 float-left">
     <img src="assets/images/team/braden.png" alt="#" class="col-12">
@@ -157,82 +178,8 @@
     </div>
     </div>
 
-  <div class="container-p col-12 col-md-4 col-lg-3 float-left">
-    <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/tj.png" alt="#" class="col-12">
-      <div class="name-container">
-    <h4>TJ Mangis</h4>
-    <h5>Health & Safety Manager</h5>
-  </div>
-
-    <ul>
-      <li><a href="mailto:tmangis@burnsscalo.com">tmangis@burnsscalo.com</a></li>
-      <li>O: <a href="#">412.510.7525</a></li>
-      <li>C: <a href="#">412.862.7125</a></li>
-    </ul>
-    <div class="background-white">
-    </div>
-    </div>
-    </div>
 
 
-
-    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
-      <div class="portfolio-list col-12 float-left">
-      <img src="assets/images/team/travis.png" alt="#" class="col-12">
-        <div class="name-container">
-      <h4>Travis Raught</h4>
-      <h5>Senior Project Manager</h5>
-    </div>
-
-      <ul>
-        <li><a href="mailto:traught@burnsscalo.com">traught@burnsscalo.com</a></li>
-        <li>C: <a href="#">724.513.4257</a></li>
-        <li class="bio"><a href="#">Read Bio</a></li>
-      </ul>
-      <div class="background-white">
-      </div>
-      </div>
-      </div>
-
-
-
-
-      <div class="container-p col-12 col-md-4 col-xl-3 float-left">
-        <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
-    <div class="name-container">
-    <h4>Nate Carr</h4>
-    <h5>Assistant Project Manager</h5>
-    </div>
-
-    <ul>
-    <li><a href="mailto:njcarr@burnsscalo.com">njcarr@burnsscalo.com</a></li>
-    <li>C: <a href="#">412.577.8909</a></li>
-    </ul>
-    <div class="background-white">
-    </div>
-    </div>
-    </div>
-
-
-    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
-    <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
-    <div class="name-container">
-    <h4>Nick Carr</h4>
-    <h5>Assistant Project Manager</h5>
-    </div>
-
-    <ul>
-    <li><a href="mailto:ncarr@burnsscalo.com">ncarr@burnsscalo.com</a></li>
-    <li>O: <a href="#">412.250.3000</a></li>
-    <li>C: <a href="#">412.298.4677</a></li>
-    </ul>
-    <div class="background-white">
-    </div>
-    </div>
-    </div>
 
     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
     <div class="portfolio-list col-12 float-left">
@@ -253,25 +200,6 @@
 
 
 
-    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
-    <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/development/mary.png" alt="#" class="col-12">
-    <div class="name-container">
-    <h4>Mary Ann Dumaret</h4>
-    <h5>Development Coordinator</h5>
-    </div>
-
-    <ul>
-    <li><a href="mailto:traught@burnsscalo.com">traught@burnsscalo.com</a></li>
-    <li>O: <a href="#">412.250.3268</a></li>
-    <li>C: <a href="#">412.651.0959</a></li>
-    </ul>
-    <div class="background-white">
-    </div>
-    </div>
-    </div>
-
-
 
     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
     <div class="portfolio-list col-12 float-left">
@@ -290,6 +218,7 @@
     </div>
     </div>
     </div>
+
 
 
 
@@ -333,6 +262,71 @@
 
 
 
+
+
+    <div class="container-p col-12 col-md-4 col-xl-3 float-left">
+      <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>Nate Carr</h4>
+    <h5>Assistant Project Manager</h5>
+    </div>
+
+    <ul>
+    <li><a href="mailto:njcarr@burnsscalo.com">njcarr@burnsscalo.com</a></li>
+    <li>C: <a href="#">412.577.8909</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>Nick Carr</h4>
+    <h5>Assistant Project Manager</h5>
+    </div>
+
+    <ul>
+    <li><a href="mailto:ncarr@burnsscalo.com">ncarr@burnsscalo.com</a></li>
+    <li>O: <a href="#">412.250.3000</a></li>
+    <li>C: <a href="#">412.298.4677</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+
+
+
+  <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/tj.png" alt="#" class="col-12">
+      <div class="name-container">
+    <h4>TJ Mangis</h4>
+    <h5>Health & Safety Manager</h5>
+  </div>
+
+    <ul>
+      <li><a href="mailto:tmangis@burnsscalo.com">tmangis@burnsscalo.com</a></li>
+      <li>O: <a href="#">412.510.7525</a></li>
+      <li>C: <a href="#">412.862.7125</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+
     <div class="container-p col-12 col-md-4 col-lg-3 float-left">
     <div class="portfolio-list col-12 float-left">
     <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
@@ -349,6 +343,58 @@
     </div>
     </div>
     </div>
+
+
+
+
+    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/development/placeholder.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>Duane Stull</h4>
+    <h5>Superintendent</h5>
+    </div>
+
+    <ul>
+    <li><a href="mailto:dstull@burnsscalo.com">jnobilese@burnsscalo.com</a></li>
+    <li>C: <a href="#">412.616.0528</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+
+
+
+    <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/development/mary.png" alt="#" class="col-12">
+    <div class="name-container">
+    <h4>Mary Ann Dumaret</h4>
+    <h5>Development Coordinator</h5>
+    </div>
+
+    <ul>
+    <li><a href="mailto:mdumaret@burnsscalo.com">mdumaret@burnsscalo.com</a></li>
+    <li>O: <a href="#">412.250.3268</a></li>
+    <li>C: <a href="#">412.651.0959</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
+
+
+
+
+
+
+
+
+
 
 
 
