--- a/portfolio-beacon-2.html
+++ b/portfolio-beacon-2.html
@@ -164,7 +164,7 @@
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
-  Beacon II property is an 80,000 SF high-end office building located in Abele Business Park Community. Direct access to countless surrounding lifestyle amenities such as food trucks, walking trails, exercise stations. 100% Visibility from I-79. Building signage available. 24/7 Building Access. Onsite Facilities Technician. Perks Program: Discounts to countless business services in the area (hotels, restaurants, salons, coffee, fitness).
+Beacon II is a modern Luxury Class A office building located in the heart of South Fayette in Abele Business Park. With immediate access to I-79—as well as close proximity to walking trails, exercise stations and a growing, local restaurant scene—tenants of Beacon II will enjoy and appreciate an incredible great work-life blend.
 </p>
 
 
