--- a/portfolio-smithfield.html
+++ b/portfolio-smithfield.html
@@ -114,7 +114,7 @@
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-  
+
   </div>
   <div class="carousel-inner">
 
@@ -149,12 +149,15 @@
 <div class="col-12 col-lg-5 col-xl-4">
 
   <h2 class="col-10 offset-1">
-<span class="green-underline">First Smithfield</span></h2>
+FIRST <span class="green-underline">SMITHFIELD</span></h2>
 <h3 class="col-10 offset-1">Downtown Pittsburgh | 300,000 SF</h3>
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
-Premium Downtown Pittsburgh site. Signage and corporate branding available. Excellent riverfront views and visibility. On-site garage parking 200 spaces. Direct access from Downtown Pittsburgh to I-376 & I-279. Sustainably managed by Cass-G. Walkability to endless amenities. Abundant natural light.
+  First Smithfield provides tenants a seamless transition from life outside the office, to an inspiring and creative work environment inside the office, making each day count. With its prime location and robustly modern amenities to blend your work and life, First Smithfield is the solution for getting the most out of Downtown Pittsburgh.
+<br>
+<br>
+  First Smithfield features include excellent riverfront views and visibility,  more than 200 on-site garage parking spaces and direct access from Downtown Pittsburgh to I-376 & I-279.
 </p>
 
 
