--- a/portfolio-stealth.html
+++ b/portfolio-stealth.html
@@ -174,7 +174,10 @@
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
-NEW Tenant Lounge with ping pong, putting green, foosball, corn hole, balcony and vending. On-Site 15,000 SF Health Club, Cafe, outdoor patios with picnic tables and umbrellas make Stealth Technology a comfortable experience for all. It also includes 24/7 access 365 days a year with building wide security system. This RENOVATED property includes Class A furnished office suites with 10' finished ceiling heights, abundant parking with a 5/1,000 per SF ratio, and energy efficient reflective glass that cuts heat rays by 50%. With NEW roof, landscaping, a renovated lobby, signage, and restrooms the building offers great new amenities.
+  A Class A office building distinguished by a seamless integration of state-of-the-art features and a distinctly artful approach. Recently renovated and outfitted with furnished office suites with 10' finished ceiling heights and reflective glass to improve energy efficiency.
+<br>
+  <br>
+  Amenities include a new tenant lounge with ping pong, putting green, foosball, corn hole, balcony and vending, on-Site 15,000 SF Health Club, Café, outdoor patios with picnic tables and umbrellas make Stealth Technology a comfortable experience for all.
 </p>
 
 
