--- a/portfolio-greentree.html
+++ b/portfolio-greentree.html
@@ -153,7 +153,10 @@
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
-969 Greentree Rd is Situated Along I-376. High Visibility With 77,000 Vehicles Per Day. Parkway Signage Available. Free Plentiful Parking. Walkability to retail- Starbucks, Olive Garden, Einstein Bros, Verizon & FedEx. Minutes from Downtown. Large open lobby areas. Direct accessibility to The Pittsburgh International Airport. 24/7 Maintenance. Sustainably managed by Class-G.
+  Strategically positioned with exceptional vehicular access to the I-376  and Downtown Pittsburgh less than half a mile away Greentree Primary Care Center is nestled in one of the most sought after suburbs of Pittsaburgh.
+<br>
+<br>
+  In addition to excellent visibility for your brand, Greentree Primary Care Center also offers a unique combination of both business and lifestyle benefits. Situated in the thriving Greentree community, these connected, inspired offices are moments away from popular retail, dining, entertainment, and more.
 </p>
 
 <div class="link-container col-10 offset-1">
