--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </div>
       <h5 class="col-8 col-lg-4">A Luxury Real Estate Firm</h5>
 
-      <div class="menu-container col-1 offset-1 offset-md-2 d-xl-none">
+      <div class="menu-container col-1 offset-1 offset-md-2 offset-lg-6 d-xl-none">
       <a onclick="myFunction()" class="col-12 float-left"><img src="assets/menu.svg" alt="Dropdown Menu" class="dropdown-menu-custom"></a>
       </div>
 
@@ -88,50 +88,11 @@
           </ul>
 
           <ul class="secondary-nav col-8 col-md-5 offset-md-4 col-lg-4 col-xl-4 offset-2 offset-lg-0">
-            <li class="nav-item-4"><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">SCHEDULE A TOUR</a></li>
+            <li class="nav-item-4"><a href="tour.html">SCHEDULE A TOUR</a></li>
             <li class="nav-item-5"><a href="https://www.landport.net/r/sva/login.lpa" target="_blank">MEMBERS</a></li>
             </ul>
 
           </nav>
-
-
-          <!-- Modal -->
-          <div class="modal col-8 fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog col-8">
-              <div class="modal-content col-8">
-                <div class="modal-header">
-                  <h6 class="modal-title" id="exampleModalLabel">BSRE</h6>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                  <h2 class="col-12">CHECK BACK<span class="orange-underline">SOON</span></h2>
-                  <h3 class="col-12">This Page In Development</h3>
-                  <p class="col-12">To schedule a tour, please call <a href="#">412.250.3000</a></p>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                </div>
-              </div>
-            </div>
-          </div>
-<!-- END MODAL -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
