--- a/team.html
+++ b/team.html
@@ -23,21 +23,19 @@
 
     <header class="col-12 float-left">
 
-
-
         <div class="logo-container col-1 col-xl-2 offset-lg-0 offset-lg-0 float-left">
       <a href="index.html" class="col-12 float-left p-0 d-xl-none"><img src="assets/mark.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
       <a href="index.html" class="d-none d-xl-block d-md-2 col-12 float-left p-0"><img src="assets/logo.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
   </div>
       <h5 class="col-8 col-lg-4">A Luxury Real Estate Firm</h5>
 
-
-      <div class="menu-container col-1 offset-1 d-lg-none">
+      <div class="menu-container col-1 offset-1 offset-md-2 offset-lg-6 d-xl-none">
       <a onclick="myFunction()" class="col-12 float-left"><img src="assets/menu.svg" alt="Dropdown Menu" class="dropdown-menu-custom"></a>
       </div>
 
       </header>
 
+      
 
 
       <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
