--- a/who-we-are.html
+++ b/who-we-are.html
@@ -23,7 +23,7 @@
 <meta name="theme-color" content="#ffffff">
   </head>
   <body>
-
+    
     <header class="col-12 float-left">
 
         <div class="logo-container col-1 col-xl-2 offset-lg-0 offset-lg-0 float-left">
@@ -32,7 +32,7 @@
   </div>
       <h5 class="col-8 col-lg-4">A Luxury Real Estate Firm</h5>
 
-      <div class="menu-container col-1 offset-1 offset-md-2 d-xl-none">
+      <div class="menu-container col-1 offset-1 offset-md-2 offset-lg-6 d-xl-none">
       <a onclick="myFunction()" class="col-12 float-left"><img src="assets/menu.svg" alt="Dropdown Menu" class="dropdown-menu-custom"></a>
       </div>
 
