--- a/accessibility.html
+++ b/accessibility.html
@@ -30,16 +30,13 @@
 
     <header class="col-12 float-left">
 
-
-
         <div class="logo-container col-1 col-xl-2 offset-lg-0 offset-lg-0 float-left">
       <a href="index.html" class="col-12 float-left p-0 d-xl-none"><img src="assets/mark.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
       <a href="index.html" class="d-none d-xl-block d-md-2 col-12 float-left p-0"><img src="assets/logo.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
   </div>
       <h5 class="col-8 col-lg-4">A Luxury Real Estate Firm</h5>
 
-
-      <div class="menu-container col-1 offset-1 offset-md-2 d-xl-none">
+      <div class="menu-container col-1 offset-1 offset-md-2 offset-lg-6 d-xl-none">
       <a onclick="myFunction()" class="col-12 float-left"><img src="assets/menu.svg" alt="Dropdown Menu" class="dropdown-menu-custom"></a>
       </div>
 
@@ -109,117 +106,81 @@
 
                       <article class="col-10 col-md-8 col-xl-6 offset-1 offset-md-2 offset-xl-3">
 
-<h6 class="col-12">
-                        BURNS & SCALO REAL ESTATE SERVICES, INC. PRIVACY POLICY
-                      </h6>
 
-<p class="col-12">
-    This Privacy Policy describes how your personal information is collected, used, and shared when you visit or make a purchase from burnsscalorealestate.com (the “Site”).
+<h1>
+BURNS & SCALO REAL ESTATE SERVICES, INC.
+WEB ACCESSIBILITY POLICY
+</h1>
+<p class="stamp col-12">
+Effective Date:  March 15, 2021
 </p>
 
 <h6 class="col-12">
-    PERSONAL INFORMATION WE COLLECT
-  </h6>
-
+For Accessibility Requests, please contact
+</h6>
 <p class="col-12">
-    When you visit the Site, we automatically collect certain information about your device, including information about your web browser, IP address, time zone, and some of the cookies that are installed on your device. Additionally, as you browse the Site, we collect information about the individual web pages or products that you view, what websites or search terms referred you to the Site, and information about how you interact with the Site. We refer to this automatically-collected information as “Device Information.”
+Burns Scalo Real Estate, Inc (BSRE) is committed to ensuring equal access for people with disabilities. As such, accessibility of the Web is of critical importance to people with disabilities around the world, including people with auditory, cognitive, physical, neurological, and visual disabilities, and is likewise important to those with accessibility needs due to aging.
 </p>
 
+<p class="col-12">
+Providing accessible web content can also benefit people who do not have disabilities but who are experiencing situational barriers. For instance, when accessing the Web from devices with small screens or in low bandwidth situations, or when experiencing barriers due to language or literacy levels, accessibility solutions can also support improved access.
+</p>
+
+
 <h6 class="col-12">
-    We collect Device Information using the following technologies:
+Policy Statement
 </h6>
 
-    •	“Cookies” are data files that are placed on your device or computer and often include an anonymous unique identifier. For more information about cookies, and how to disable cookies, visit http://www.allaboutcookies.org.
-    •	“Log files” track actions occurring on the Site, and collect data including your IP address, browser type, Internet service provider, referring/exit pages, and date/time stamps.
-    •	“Web beacons,” “tags,” and “pixels” are electronic files used to record information about how you browse the Site.
-
-
 <p class="col-12">
-    When we talk about “Personal Information” in this Privacy Policy, we are talking both about Device Information and Order Information.
+All new and redesigned web content published after the effective date of this policy by BSRE, both for public and internal websites and services, will conform to WCAG 2.0 Level A success criteria.
+All existing web content published prior to the effective date of this policy will either be archived or modified upon resubmission to conform to WCAG 2.0 Level A success criteria. Additional development will be assessed as deployed.
 </p>
 
 
 <h6 class="col-12">
-    HOW DO WE USE YOUR PERSONAL INFORMATION?
-  </h6>
-
-<p class="col-12">
-    We use the Device Information that we collect to help us screen for potential risk and fraud (in particular, your IP address), and more generally to improve and optimize our Site (for example, by generating analytics about how our customers browse and interact with the Site, and to assess the success of our marketing and advertising campaigns).
-</p>
-
-<h6 class="col-12">
-    SHARING YOUR PERSONAL INFORMATION
-  </h6>
-
-<p class="col-12">
-    We share your Personal Information with third parties to help us use your Personal Information, as described above.  For example, we use Google Analytics to help us understand how our customers use the Site--you can read more about how Google uses your Personal Information here:  https://www.google.com/intl/en/policies/privacy/.  You can also opt-out of Google Analytics here:  https://tools.google.com/dlpage/gaoptout.
-</p>
-
-<p class="col-12">
-    Finally, we may also share your Personal Information to comply with applicable laws and regulations, to respond to a subpoena, search warrant or other lawful request for information we receive, or to otherwise protect our rights.
-</p>
-
-<h6 class="col-12">
-    BEHAVIOURAL ADVERTISING
-  </h6>
-
-    <p class="col-12">
-    As described above, we use your Personal Information to provide you with targeted advertisements or marketing communications we believe may be of interest to you.  For more information about how targeted advertising works, you can visit the Network Advertising Initiative’s (“NAI”) educational page at http://www.networkadvertising.org/understanding-online-advertising/how-does-it-work.
-</p>
-
-  <ul class="col-12">
-    <li class="col-12">You can opt out of targeted advertising by:</li>
-    <li class="col-12"><a href="https://www.facebook.com/settings/?tab=ads">FACEBOOK</a></li>
-    <li class="col-12"><a href="https://www.google.com/settings/ads/anonymou">GOOGLE</a></li>
-</ul>
-
-    <p class="col-12">
-    Additionally, you can opt out of some of these services by visiting the Digital Advertising Alliance’s opt-out portal at:  http://optout.aboutads.info/.
-  </p>
-
-<h6 class="col-12">
-    DO NOT TRACK
+Exclusions
 </h6>
 
-    <p class="col-12">
-    Please note that we do not alter our Site’s data collection and use practices when we see a Do Not Track signal from your browser.
-  </p>
-
-  <p class="col-12">
-    If you are a European resident, you have the right to access personal information we hold about you and to ask that your personal information be corrected, updated, or deleted. If you would like to exercise this right, please contact us through the contact information below.
-  </p>
-
-  <p class="col-12">
-    Additionally, if you are a European resident we note that we are processing your information in order to fulfill contracts we might have with you (for example if you make an order through the Site), or otherwise to pursue our legitimate business interests listed above.  Additionally, please note that your information will be transferred outside of Europe, including to Canada and the United States.
-  </p>
-
-<h6 class="col-12">
-    DATA RETENTION
-  </h6>
-
-    <p class="col-12">
-    When you place an order through the Site, we will maintain your Order Information for our records unless and until you ask us to delete this information.
-  </p>
-
-<h6 class="col-12">
-    CHANGES
-  </h6>
-
-    <p class="col-12">
-    We may update this privacy policy from time to time in order to reflect, for example, changes to our practices or for other operational, legal or regulatory reasons.
-  </p>
-
-<h6 class="col-12">
-    CONTACT US
-  </h6>
-
-    <p class="col-12">
-    For more information about our privacy practices, if you have questions, or if you would like to make a complaint, please contact us by e-mail at marketing@burnsscalo.com or by mail using the details provided below:
-  </p>
-
-  <p>
-      965 Greentree Rd Suite 400, Pittsburgh, PA, 15220, United States
+<p class="col-12">
+Web content that has been archived is not subject to the standards referenced in this policy. Should there be a specific request for access to the archived content by any individual with a disability, that content will be made available in a suitable format within 10 business days. Where it is not technically possible to make the content available, a suitable alternative should be agreed upon with the individual. The department or team responsible for the creation of the content is responsible for making it accessible.
 </p>
+
+
+<h6 class="col-12">
+Procurement
+</h6>
+<p class="col-12">
+This policy applies to all web content developed by or for BSRE and should be referenced within any contract of services or statements of work for web content, websites, services, or applications. Any such contract or statement of work must include a provision for an independent statement of conformance stating that the work meets the required standard. This should form part of the deliverable approval process.
+</p>
+
+
+<h6 class="col-12">
+Syndicated Content
+</h6>
+
+<p class="col-12">
+  Elements of the BSRE website might include web content syndicated from other providers. For example, a social media stream or other third-party author. BSRE cannot guarantee full accessibility compliance of the third-party website or social media stream once the user leaves the BSRE website.
+</p>
+
+
+
+<h6 class="col-12">
+Accessibility Requests
+</h6>
+<p class="col-12">
+For more information about our accessibility practices, if you have questions, or if you would like to make a request, please contact us by e-mail at marketing@burnsscalo.com or by mail using the details provided below:
+</p>
+
+<p class="col-12">
+  965 Greentree Rd Suite 400, Pittsburgh, PA, 15220, United States
+</p>
+
+
+
+
+
+
+
                       </article>
 
 
