--- a/press-article-10.html
+++ b/press-article-10.html
@@ -27,10 +27,8 @@
     <title>Burns Scalo Real Estate</title>
   </head>
   <body>
-
+    
     <header class="col-12 float-left">
-
-
 
         <div class="logo-container col-1 col-xl-2 offset-lg-0 offset-lg-0 float-left">
       <a href="index.html" class="col-12 float-left p-0 d-xl-none"><img src="assets/mark.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
@@ -38,12 +36,13 @@
   </div>
       <h5 class="col-8 col-lg-4">A Luxury Real Estate Firm</h5>
 
-
-      <div class="menu-container col-1 offset-1 offset-md-2 d-xl-none">
+      <div class="menu-container col-1 offset-1 offset-md-2 offset-lg-6 d-xl-none">
       <a onclick="myFunction()" class="col-12 float-left"><img src="assets/menu.svg" alt="Dropdown Menu" class="dropdown-menu-custom"></a>
       </div>
 
       </header>
+
+
 
 
       <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
@@ -170,7 +169,7 @@
                           <p class="col-12">
                           It's unclear if Diamond Ridge has received approvals yet from Moon Township, but the community previously approved a plan by Chevron for a campus of similar scale.
                         </p>
-                        
+
                       </article>
 
 
