--- a/portfolio-zenith.html
+++ b/portfolio-zenith.html
@@ -84,7 +84,7 @@
           </ul>
 
           <ul class="secondary-nav col-8 col-md-5 offset-md-4 col-lg-4 col-xl-4 offset-2 offset-lg-0">
-            <li class="nav-item-4"><a href="#">SCHEDULE A TOUR</a></li>
+            <li class="nav-item-4"><a href="tour.html">SCHEDULE A TOUR</a></li>
             <li class="nav-item-5"><a href="#">MEMBERS</a></li>
             </ul>
 
